--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,9 +17,10 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th class="<%= @bg_title%>"><%= link_to "Movie Title", movies_path(:ratings => @ratings_to_show, :sort_by => 'title'), :id => 'title_header'%></th>
+      
       <th>Rating</th>
-      <th>Release Date</th>
+      <th class="<%= @bg_release_date%>"><%= link_to "Release Date", movies_path(:ratings => @ratings_to_show, :sort_by => 'release_date'), :id => 'release_date_header'%></th>
       <th>More Info</th>
     </tr>
   </thead>
